# langchain-agents

./: .gitignore  README.md  TROUBLESHOOTING.md
deployment/: .env.example  .gitignore  CLAUDE.md  Dockerfile  KNOWLEDGE.md  Makefile  README.md  api-tests.http  cli_chat.py  docker-compose.yml  pyproject.toml
deployment/app/: __init__.py  server.py
deployment/app/agents/: __init__.py  conversation_manager.py  it_helpdesk.py  servicenow_agent.py
deployment/app/agents/base/: __init__.py  agent_base.py  tools.py
deployment/app/agents/code_assistant/: __init__.py  modernization_agent.py
deployment/app/agents/content/: __init__.py  content_agent.py
deployment/app/agents/data_analyst/: __init__.py  data_analyst_agent.py
deployment/app/agents/documents/: __init__.py  document_agent.py
deployment/app/agents/documents/templates/: policy_template.md  sop_template.md  wli_template.md
deployment/app/agents/evals/: __init__.py  datasets.py  evaluators.py
deployment/app/agents/it_support/: __init__.py  hitl_support_agent.py
deployment/app/agents/rag/: __init__.py  multilingual_rag_agent.py
deployment/app/agents/research/: __init__.py  research_agent.py
deployment/app/agents/tracing/: __init__.py  langsmith_config.py
deployment/app/chains/: __init__.py  agent.py  chat.py  doc_rag.py  langgraph_agent.py  rag.py
deployment/app/static/: chat.html
deployment/docs/: ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md  Project_Architecture_Blueprint.md  SECURITY.md  SETUP.md
deployment/docs/api/: README.md
deployment/tests/: __init__.py  conftest.py  test_datasets.py  test_enterprise_agents.py  test_evaluators.py  test_server.py
