[project]
name = "langchain-platform"
version = "1.0.0"
description = "Production-ready LangChain Platform with FastAPI and LangServe"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LangChain Team" }]

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langserve[all]>=0.3.0",
    "langsmith>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain-community>=0.3.0",
    # Document processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "docx2txt>=0.8",
    # Vector store
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    # CLI
    "rich>=13.0.0",
    # Enterprise Agents - Data Analysis
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    # Enterprise Agents - Research
    "tavily-python>=0.3.0",
    # Enterprise Agents - Multilingual RAG
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

anthropic = [
    "langchain-anthropic>=0.3.0",
]

ollama = [
    "langchain-ollama>=0.2.0",
]

all = [
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "S", "B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
